Jamming, first draft

--- a/HTML/OpenWeatherAPIProject.html
+++ b/HTML/OpenWeatherAPIProject.html
@@ -95,17 +95,17 @@
 
             </div>
             <div id="itemDB" class="itemDB">
-                <p id="temp">Temperature: 56 degrees</p>
+                <p id="temp"></p>
                 <br>
-                <p id="windspeed">Wind Speed: 1.5 knots</p>
+                <p id="windspeed"></p>
                 <br>
-                <p id="humidity">Humidity: 100%</p>
+                <p id="humidity"></p>
                 <br>
-                <p id="weather1">Weather: Clear Skies</p>
+                <p id="weather1"></p>
                 
             </div>
             <div id="itemDC" class="itemDC">
-                <img id="weatherImage" src="../Assets/northern lights.jpeg" alt="Northern Lights">
+                <img id="weatherImage" src="" alt="">
             </div>
         </div>
         
