added navigation bar to jamming, linked it to site

--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -28,14 +28,19 @@
                     I have used basic HTML forms to create an interactive Mad Lib.
                 </p>
                 <br>
-                <h1><a href="GridTemplateProject.html">Grid Template Project</a></h1>
+                <h1><a href="GridTemplateProject.html">Grid Template</a></h1>
                 <p>
                     Used CSS Grid to create a better web page layout. I have a few media queries too so this page should resize depending on the size of your browser.
                 </p>
                 <br>
-                <h1><a href="OpenWeatherAPIProject.html">Open Weather API Project</a></h1>
+                <h1><a href="OpenWeatherAPIProject.html">Open Weather API</a></h1>
                 <p>
                     Called a 3rd party API and displayed its info on a webpage. This tool searches for current weather in any US city.
+                </p>
+                <br>
+                <h1><a href="https://coxnisjamming.surge.sh/">React Jamming</a></h1>
+                <p>
+                    A React.js app which calls the Spotify API to search for tracks and save them to a playlist. All styling was copied from a pre-fab template. This app was deployed by surge.sh through npm.
                 </p>
             </div>
         </div>
