--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -40,7 +40,12 @@
                 <br>
                 <h1><a href="https://coxnisjamming.surge.sh/">React Jamming</a></h1>
                 <p>
-                    A React.js app which calls the Spotify API to search for tracks and save them to a playlist. All styling was copied from a pre-fab template. This app was deployed by surge.sh through npm. Unfortunately, to make this app function properly I need to add your Spotify email to my app's database. So if you're actually interested in using this app, text me. Otherwise you'll just have to trust that it works exactly as I have inteded it to.
+                    A React.js app which calls the Spotify API to search for tracks and save them to a playlist. All styling was copied from a pre-fab template. This app was deployed by surge.sh through npm. Unfortunately, to make this app function properly I need to add your Spotify email to my app's database. So if you're actually interested in using this app, text me. Otherwise you'll just have to trust that it works exactly as I have intended it to.
+                </p>
+                <br>
+                <h1><a href="https://coxnswebsite.surge.sh/">React Router</a></h1>
+                <p>
+                    This project converted this website into a one-page web app. I will be migrating all my projects over to this new address and all updates will live there from now on. I just like it better, it's easier to maintain.
                 </p>
             </div>
         </div>
